--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,30 @@
 # Check https://circleci.com/docs/2.0/language-python/ for more details
 version: 2
-jobs:
-#  build_image:
-#    docker:
-#      - image: circleci/python:3.6
-#
-#    working_directory: ~/repo
-#
-#    steps:
-#      - checkout
-#      - setup_remote_docker
-#      - run:
-#          name: Build image
-#          command: |
-#            docker build -t gcr.io/information-asset-register/iar-backend:${CIRCLE_SHA1} .
 
+jobs:
+  # Build and push a Docker image to the gcloud container registry
+  build_image:
+    machine: true
+    steps:
+      - checkout
+
+      - run:
+          name: Authenticate to Google Cloud
+          command: |
+            echo "$GCLOUD_SERVICE_KEY" > ${HOME}/gcloud-service-key.json
+            sudo /opt/google-cloud-sdk/bin/gcloud auth activate-service-account --key-file=${HOME}/gcloud-service-key.json
+            sudo /opt/google-cloud-sdk/bin/gcloud config set project $GCLOUD_PROJECT
+
+      - run:
+          name: Build image
+          command: |
+            docker build -t gcr.io/information-asset-register/iar-backend:${CIRCLE_SHA1} .
+
+  # Run default unittests and submit code coverage information
   test:
     docker:
       - image: circleci/python:3.6
       - image: postgres:9.6
-
-    working_directory: ~/repo
 
     environment:
       DJANGO_DB_ENGINE: django.db.backends.postgresql
@@ -66,3 +70,4 @@ workflows:
   build_and_test:
     jobs:
       - test
+      - build_image
