--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,7 @@ build_root={env:TOXINI_ARTEFACT_DIR:{toxinidir}/build}
 [testenv]
 # Additional dependencies
 deps=
-    -rrequirements.txt
+    -rrequirements/base.txt
     coverage
 # Which environment variables should be passed into the environment.
 passenv=
@@ -58,7 +58,7 @@ commands=
 [testenv:doc]
 basepython=python3.6
 deps=
-    -rrequirements.txt
+    -rrequirements/base.txt
     -rdoc/requirements.txt
 commands=sphinx-build -a -v -b html doc/ {[_vars]build_root}/doc/
 
@@ -66,7 +66,7 @@ commands=sphinx-build -a -v -b html doc/ {[_vars]build_root}/doc/
 [testenv:flake8]
 basepython=python3.6
 deps=
-    -rrequirements.txt
+    -rrequirements/base.txt
 #   We specify a specific version of flake8 to avoid introducing "false"
 #   regressions when new checks are introduced. The version of flake8 used may
 #   be overridden via the TOXINI_FLAKE8_VERSION environment variable.
